Avalara Fullqa/src/Conga Composer/objects/Conga_Email_Template__c.object
<CustomObject>
    <description>Email template manager for use with Conga Composer</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HTMLBody__c</fullName>
        <label>HTML Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Group__c</fullName>
        <label>Template Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextBody__c</fullName>
        <label>Text Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conga Email Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CET-{00000}</displayFormat>
        <label>Email Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>